ci: fix remaining Java 25→21 compat across all modules
- yawl-benchmark/pom.xml: hardcoded release 25 → ${maven.compiler.release}
- yawl-erlang-bridge/pom.xml: hardcoded release 25 → ${maven.compiler.release}
- yawl-erlang/pom.xml: hardcoded release 25 → ${maven.compiler.release}
- yawl-utilities/pom.xml: exclude java25/ Gatherer sources (Java 25 only)
- yawl-erlang/ErlangNode.java: Java 21 compat fixes
- yawl-native-bridge/ErlangNode.java: Java 21 compat fixes
- yawl-native-bridge/NativeHandle.java: Java 21 compat fixes
- yawl-qlever/QLeverFfiBindings.java: Java 21 compat fixes
- yawl-data-modelling/DataModellingL2.java: Java 21 compat fixes
- .mvn/maven.config: CI profile settings

https://claude.ai/code/session_01QsVqhQfDp6gbzvKfrnGTNF